# routers/commentsRouter_controllers.go
@@ -109,7 +109,7 @@ func init() {
     beego.GlobalControllerRouter["quiz/controllers:QuizController"] = append(beego.GlobalControllerRouter["quiz/controllers:QuizController"],
         beego.ControllerComments{
             Method: "PostQuestions",
-            Router: "/PostQuest",
+            Router: "/PostQuest/:id",
             AllowHTTPMethods: []string{"post"},
             MethodParams: param.Make(),
             Filters: nil,
@@ -129,6 +129,15 @@ func init() {
             Method: "Search",
             Router: "/SearchQuiz/:key",
             AllowHTTPMethods: []string{"get"},
+            MethodParams: param.Make(),
+            Filters: nil,
+            Params: nil})
+
+    beego.GlobalControllerRouter["quiz/controllers:QuizController"] = append(beego.GlobalControllerRouter["quiz/controllers:QuizController"],
+        beego.ControllerComments{
+            Method: "UpdateQuestion",
+            Router: "/UpdateQuestion/:name",
+            AllowHTTPMethods: []string{"put"},
             MethodParams: param.Make(),
             Filters: nil,
             Params: nil})
