# swagger/swagger.yml
@@ -193,7 +193,7 @@ paths:
       description: create users
       operationId: QuizController.PostImage
       parameters:
-      - in: query
+      - in: formData
         name: file
         description: image
         required: true
@@ -208,21 +208,24 @@ paths:
           description: '{string} done'
         "403":
           description: body is empty
-  /quiz/PostQuest:
+  /quiz/PostQuest/{id}:
     post:
       tags:
       - quiz
       description: post questions
       operationId: QuizController.PostQuestions
       parameters:
+      - in: path
+        name: id
+        description: quizID
+        required: true
+        type: string
       - in: body
         name: body
         description: body for user content
         required: true
         schema:
-          type: array
-          items:
-            $ref: '#/definitions/models.Question'
+          $ref: '#/definitions/temp.mapQuestion'
       responses:
         "200":
           description: '{string} models.Question.QuizName'
@@ -265,6 +268,29 @@ paths:
             $ref: '#/definitions/models.Quiz'
         "403":
           description: :key is empty
+  /quiz/UpdateQuestion/{name}:
+    put:
+      tags:
+      - quiz
+      description: post questions
+      operationId: QuizController.UpdateQuestion
+      parameters:
+      - in: path
+        name: name
+        description: name quiz
+        required: true
+        type: string
+      - in: body
+        name: body
+        description: body for user content
+        required: true
+        schema:
+          $ref: '#/definitions/temp.mapQuestion'
+      responses:
+        "200":
+          description: '{string} models.Question.QuizName'
+        "403":
+          description: body is empty
   /quiz/UpdateQuiz/{uid}:
     put:
       tags:
@@ -420,6 +446,23 @@ definitions:
       NumberOfParticipant:
         type: integer
         format: int64
+  temp.QuestionUpdate:
+    title: QuestionUpdate
+    type: object
+    properties:
+      Answer:
+        type: integer
+        format: int64
+      Choice1:
+        type: string
+      Choice2:
+        type: string
+      Choice3:
+        type: string
+      Choice4:
+        type: string
+      Question:
+        type: string
   temp.QuizUpdate:
     title: QuizUpdate
     type: object
@@ -427,6 +470,12 @@ definitions:
       NumberOfQuestion:
         type: integer
         format: int64
+  temp.mapQuestion:
+    title: mapQuestion
+    type: object
+    properties:
+      num:
+        $ref: '#/definitions/temp.QuestionUpdate'
 tags:
 - name: host
   description: |
